Fixed spacing and forms in contact page

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -26,7 +26,7 @@ section > p {
 }
 
 #contact_container {
-	width: 45vw;
+	width: 50vw;
 	margin: 10vh auto 0;
 	display: flex;
 	flex-direction: row;
@@ -36,12 +36,12 @@ section > p {
 }
 
 .field:nth-child(1) {
-	width: 42.5%;
-	margin-right: 5%;
+	width: 45%;
+	margin-right: 2.5%;
 }
 .field:nth-child(2) {
-	width: 42.5%;
-	margin-left: 5%;
+	width: 45%;
+	margin-left: 2.5%;
 }
 
 .field:nth-child(3) {
@@ -109,6 +109,7 @@ button {
 	position: relative;
 	vertical-align: middle;
 	padding: 0 1vw;
+	color: var(--black);
 	margin: auto;
 	font-size: 2vw;
 	width: fit-content;
